- Adds new cache name reference of TurSNSiteSpotlightRepository into TurSNSiteSpotlightAPI.turSNSiteSpotlightDelete - Adds some comments